deploy/hn-pin-proxy-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hn-pin-proxy-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hn-pin-proxy
spec:
  hosts:
  - "*"
  gateways:
  - hn-pin-proxy-gateway
  http:
  - match:
    - uri:
        prefix: /hnpinproxy
    route:
    - destination:
        host: 127.0.0.1
        port:
          number: 8080
